0-k8s-setup/argocd/ingress.yml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.sem-ugr-k8s.arsahosting.com`)
      priority: 10
      services:
        - name: argocd-server
          port: http
    - kind: Rule
      match: Host(`argocd.sem-ugr-k8s.arsahosting.com`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: http
          scheme: h2c
  tls:
    secretName: tls.sem-ugr-k8s.arsahosting.com
